<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/home_title"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_below="@id/textView2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <Button

            android:id="@+id/fragment_home_search"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="25sp"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            />

        <Button

            android:id="@+id/fragment_home_operator_details"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_details"
            android:textSize="25sp"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            />

        <Button
            android:id="@+id/fragment_home_machine_details"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_details"
            android:textColorLink="@color/button_background"
            android:textSize="25sp"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
        />

        <Button
            android:id="@+id/fragment_home_data_report"
            style="@style/AppTheme.Button"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_report"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
        />
        <Button
            android:id="@+id/fragment_home_needle_logs"
            style="@style/AppTheme.Button"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/needle_logs"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
        />

        <Button
            android:id="@+id/fragment_home_exit"
            style="@style/AppTheme.Button"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
        />
    </LinearLayout>

</RelativeLayout>