<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:baselineAligned="false">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scrollbars="vertical|horizontal"
        android:layout_weight="1"
        android:scrollbarStyle="outsideInset"
        >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical|horizontal"
            >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"

        android:paddingBottom="20dp"
        android:paddingRight="20dp"

        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/operator_id" />

            <TextView
                android:id="@+id/needle_detail_view_operator_id"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/operator_name" />

            <TextView
                android:id="@+id/needle_detail_view_operator_name"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/machine_id" />

            <TextView
                android:id="@+id/needle_detail_view_machine_id"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/machine_type" />

            <TextView
                android:id="@+id/needle_detail_view_machine_type"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/line" />

            <TextView
                android:id="@+id/needle_detail_view_line"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView

                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/style_information" />

            <TextView
                android:id="@+id/needle_detail_view_style_information"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/operation_name" />

            <TextView
                android:id="@+id/needle_detail_view_operation_name"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/fabric_type" />

            <TextView
                android:id="@+id/needle_detail_view_fabric_type"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/needle_to_be_procured" />

            <TextView
                android:id="@+id/needle_detail_view_needle_to_be_procured"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/size_of_needle" />

            <TextView
                android:id="@+id/needle_detail_view_size_of_needle"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/refused_needle_type" />

            <TextView
                android:id="@+id/needle_detail_view_refused_needle_type"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/box_no" />

            <TextView
                android:id="@+id/needle_detail_view_box_no"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/column_no" />

            <TextView
                android:id="@+id/needle_detail_view_column_no"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/life_of_needle" />

            <TextView
                android:id="@+id/needle_detail_view_life_of_needle"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/time_of_day" />

            <TextView
                android:id="@+id/needle_detail_view_time_of_day"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/issuing_time" />

            <TextView
                android:id="@+id/needle_detail_view_issuing_time"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/date_of_procurement" />

            <TextView
                android:id="@+id/needle_detail_view_date_of_procurement"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/date_of_replacement" />

            <TextView
                android:id="@+id/needle_detail_view_date_of_replacement"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/time_of_replacement" />

            <TextView
                android:id="@+id/needle_detail_view_time_of_replacement"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                style="@style/detail_text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/time_of_procurement" />

            <TextView
                android:id="@+id/needle_detail_view_time_of_procurement"
                style="@style/detail_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </TableRow>

    </TableLayout>
        </HorizontalScrollView>
</ScrollView>

</LinearLayout>