<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorColumnBackground">
        <TextView
            android:text="@string/s_no"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif"

            />

        <TextView
          android:text="@string/operator_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.4"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:id="@+id/fragment_needle_list_id"


            />

        <TextView
          android:text="@string/operator_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:id="@+id/fragment_needle_list_name"


            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/needle_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>