<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5"
            style="?android:listSeparatorTextViewStyle"
            android:textAlignment="center"
            android:text="@string/style_with_most_refusals"
            android:layout_margin="5dp"
            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/fragment_data_report_style_refusals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5"
            style="?android:listSeparatorTextViewStyle"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="20sp"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5"
            style="?android:listSeparatorTextViewStyle"
            android:textAlignment="center"
            android:text="@string/line_with_most_refusals"
            android:layout_margin="5dp"
            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/fragment_data_report_line_refusals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5"
            style="?android:listSeparatorTextViewStyle"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="20sp"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5"
            style="?android:listSeparatorTextViewStyle"
            android:textAlignment="center"
            android:text="@string/time_consumed"
            android:layout_margin="5dp"
            android:textSize="20sp"


            />
        <TextView
            android:id="@+id/fragment_data_report_time_consumed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="0.5"
            style="?android:listSeparatorTextViewStyle"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="20sp"


            />
    </LinearLayout>

</LinearLayout>